--- a/DjangoProject/mysite/projects/templates/projects/detail.html
+++ b/DjangoProject/mysite/projects/templates/projects/detail.html
@@ -3,13 +3,16 @@
 {% if employees %}
     <p>Following are the people with the First name <b>"{{fname}}"</b>: </p>
 
-    <table>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Sex</th>
-            <th>Phone no.</th>
-        </tr>
+    <table class="table table-bordered table-striped" >
+        <thead class="table-secondary">
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Sex</th>
+                <th>Phone no.</th>
+            </tr>
+        </thead>
+
     {% for employee in employees %}
         <tr>
             <td>{{ employee.first_name }}</td>
