--- a/DjangoProject/mysite/projects/static/projects/css/style.css
+++ b/DjangoProject/mysite/projects/static/projects/css/style.css
@@ -1,10 +1,44 @@
 body {
   margin-left: 40px;
   margin-right: 40px;
-
-
 }
 
-tr, td {
+tr,
+td {
   padding: 15px;
+}
+
+.box {
+  padding: 15px;
+  border: 2px solid gray;
+}
+
+hr.dotted {
+  border-top: 2px dashed gray;
+}
+
+.download_btn {
+  display: none;
+}
+
+#json_div {
+  display: block;
+}
+
+#url_div {
+  display: none;
+}
+
+
+
+.ul_hor li {
+  display: inline;
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-size: 18px;
+}
+
+.navbar {
+  display: inline;
 }
