--- a/DjangoProject/mysite/projects/templates/projects/index.html
+++ b/DjangoProject/mysite/projects/templates/projects/index.html
@@ -1,7 +1,7 @@
 {% extends 'projects/header.html' %}
 {% block content %}
 <h3>
-    hello world
+    Hello World!
 </h3>
     
 {% endblock content %}
