--- a/DjangoProject/mysite/projects/templates/projects/list_config.html
+++ b/DjangoProject/mysite/projects/templates/projects/list_config.html
@@ -1,11 +1,14 @@
 {% extends 'projects/header.html' %}
 {% block content %}
     {% if scheme_list %}
-        <ul>
+    <h3>List of Schemes: </h3>
+    <br>
+
+        <ol>
         {% for scheme in scheme_list %}
-            <li>{{scheme}}</li>
+            <li><a href="{% url 'view_config' scheme %}">{{scheme}}</a></li>
         {% endfor %}
-        </ul>
+        </ol>
     {% else %}
         <h3>No Scheme Found</h3>
     {% endif %}
