--- a/DjangoProject/mysite/projects/templates/projects/view_config.html
+++ b/DjangoProject/mysite/projects/templates/projects/view_config.html
@@ -1,17 +1,26 @@
 {% extends 'projects/header.html' %}
 {% block content %}
     <h3>Scheme Name: {{ scheme_name }}</h3>
+    <a href="{% url 'edit_config' scheme_name %}"><button>Edit Scheme</button></a>
     <br>
-    {% if scheme_contents %}
-        <ul>
-        {% for parent_content in scheme_parent_content %}
-            <li>
-                <b>Field: </b>{{parent_content.field}}
-                <br>
-                <b>xPath: </b>{{parent_content.xpath}}
-            </li>
+    <br>
+    {% if has_data %}
+        <!-- <ul> -->
+        {% for parent, childs in contents %}
+            <table>
+                <tr>
+                    <td><b>Category: </b></td>
+                    <td>{{parent.field}}</td>
+                </tr>
+                <tr>
+                    <td><b>Product Box xPath:  </b></td>
+                    <td>{{parent.xpath}}</td>
+                </tr>
+
+            </table>
             <br>
             <br>
+
 
             <table class="table table-hover">
                 <thead class="table-dark">
@@ -19,21 +28,20 @@
                     <th>Field</th>
                     <th>xPath</th>
                 </thead>
-                {% with idx=0 %}
-                {% for contents in scheme_contents %}
-                    {% if contents.parent_field == parent_content.field %}
+                {% for child in childs %}
+                    {% comment %} {% if contents.parent_field == parent_content.field %} {% endcomment %}
                         <tr>
-                            <td>{{ idx|add:"1" }}</td>
-                            <td>{{ contents.field }}</td>
-                            <td>{{ contents.xpath }}</td>
+                            <td>{{ forloop.counter }}</td>
+                            <td>{{ child.field }}</td>
+                            <td>{{ child.xpath }}</td>
                         </tr>
-                    {% endif %}
+                    {% comment %} {% endif %} {% endcomment %}
                 {% endfor %}
-                {% endwith %}
             </table>
+            <br><br>
 
         {% endfor %}
-        </ul>
+        <!-- </ul> -->
     {% else %}
         <h4>No Scheme named "{{scheme_name}}" found</h4>
     {% endif %}
