--- a/DjangoProject/mysite/projects/templates/projects/upload_both.html
+++ b/DjangoProject/mysite/projects/templates/projects/upload_both.html
@@ -5,7 +5,7 @@
 
 <div class="latest_download">
     <a id="latest_file" href="{% get_media_prefix %}path_to_upload/{{ latest_url }}.csv " download> 
-        <button> Download Latest </button>
+        <button id="download_latest"> Download Latest Scraped Data</button>
     </a>
 </div>
 <br><br><br>
